[package]
edition = "2024"
name = "sov-eigenda-adapter"
version = "0.1.0"

[dependencies]
alloy-consensus = { version = "1.0.32", default-features = false, features = [
  "serde",
  "serde-bincode-compat",
  "k256",
] }
alloy-eips = { version = "1.0.32", default-features = false }
alloy-network = { version = "1.0.32", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = [
  "serde",
] }
alloy-provider = { version = "1.0.32", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-rpc-client = { version = "1.0.32", default-features = false }
alloy-rpc-types = { version = "1.0.32", default-features = false }
alloy-rpc-types-eth = { version = "1.0.32", default-features = false }
alloy-signer = { version = "1.0.32", default-features = false }
alloy-signer-local = { version = "1.0.32", default-features = false }
alloy-sol-types = { version = "1.3.1", default-features = false }
alloy-transport = { version = "1.0.32", default-features = false }
anyhow = { version = "1.0.99", default-features = false }
arbitrary = { version = "1.3", optional = true }
ark-bn254 = { version = "0.5.0", default-features = false, features = [
  "curve",
] }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [
  "derive",
] }
async-trait = "0.1.88"
backon = { version = "1.5.2", optional = true }
bitvec = { version = "1.0.1", default-features = false }
borsh = { version = "1.5.7", default-features = false, features = ["bytes"] }
bytes = { version = "1.10.1", default-features = false }
derive_more = { version = "2.0.1" }
futures = { version = "0.3.31" }
hashbrown = { version = "0.15.4", default-features = false, features = [
  "default-hasher",
] }
hex = { version = "0.4.3" }
proptest = { version = "1.7.0", features = ["alloc", "std"], optional = true }
reqwest = { version = "0.12.22", features = ["json"], optional = true }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0", default-features = false, features = [
  "serde",
] }
rust-kzg-bn254-primitives = { version = "0.1.2", default-features = false }
rust-kzg-bn254-prover = { version = "0.1.1", default-features = false }
rustls = { version = "0.23.31", features = ["aws-lc-rs"], optional = true }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0.141" }
serde_with = { version = "3.14.0" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "b486610bbad3e39d5785b6009c5d9ca9ab9dec9e" }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.47.1", features = ["sync"], optional = true }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "local-time",
] }
tracing-tree = "0.4"
url = { version = "2.5.4" }
# Pinned so that it's same as in https://github.com/Sovereign-Labs/sovereign-sdk/blob/b486610bbad3e39d5785b6009c5d9ca9ab9dec9e/Cargo.toml
schemars = { version = "0.8.21", default-features = false, features = [
  "derive",
] }

[build-dependencies]
ark-bn254 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [
  "derive",
] }
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
rust-kzg-bn254-prover = { version = "0.1.1", default-features = false }

[dev-dependencies]
alloy-consensus = { version = "1.0.32", default-features = false, features = [
  "arbitrary",
] }
alloy-provider = { version = "1.0.32", default-features = false, features = [
  "anvil-api",
] }
alloy-rpc-types = { version = "1.0.32", default-features = false, features = [
  "anvil",
] }
arbitrary = { version = "1.3" }
bincode = { version = "2.0.1", default-features = false, features = [
  "derive",
  "serde",
  "std",
] }
hex = "0.4.3"
jsonschema = "0.33.0"
rand = { version = "0.8" }
reltester = { version = "2.0.0" }
# Pinned so that it's same as in https://github.com/Sovereign-Labs/sovereign-sdk/blob/b486610bbad3e39d5785b6009c5d9ca9ab9dec9e/Cargo.toml
risc0-zkvm = { version = "2.1", default-features = false, features = ["std"] }
test-strategy = { version = "0.4.3" }
testcontainers = "0.25.0"
wiremock = "0.6.0"

[features]
arbitrary = ["dep:arbitrary", "dep:proptest"]
default = []
native = [
  "sov-rollup-interface/native",
  "alloy-rpc-types/anvil",
  "alloy-rpc-client/default",
  "alloy-rpc-client/ws",
  "alloy-provider/anvil-api",
  "alloy-provider/default",
  "alloy-provider/ws",
  "alloy-eips/kzg",
  "reth-trie-common/eip1186",
  "dep:rustls",
  "dep:backon",
  "dep:tokio",
  "dep:reqwest",
]
stale-stakes-forbidden = []
use-rbn-state = []
