[workspace]
members = ["crates/sov-eigenda-adapter", "crates/eigenda"]
resolver = "2"

[workspace.dependencies]
alloy-primitives = { version = "1.3.1", default-features = false }
alloy-sol-types = { version = "1.3.1", default-features = false }
arbitrary = { version = "1.3" }
ark-bn254 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
bincode = { version = "2.0.1", default-features = false }
bytes = { version = "1.10.1", default-features = false }
derive_more = { version = "2.0.1" }
hashbrown = { version = "0.15.4", default-features = false }
hex = { version = "0.4.3" }
jsonschema = "0.33.0"
proptest = { version = "1.7.0" }
rand = { version = "0.8" }
reltester = { version = "2.0.0" }
# Pinned so that it's same as in https://github.com/Sovereign-Labs/sovereign-sdk/blob/b486610bbad3e39d5785b6009c5d9ca9ab9dec9e/Cargo.toml
risc0-zkvm = { version = "2.1", default-features = false }
rust-kzg-bn254-prover = { version = "0.1.1", default-features = false }
serde = { version = "1.0.219", default-features = false }
test-strategy = { version = "0.4.3" }
testcontainers = "0.25.0"
thiserror = { version = "2.0.12", default-features = false }
tracing = { version = "0.1.41" }
wiremock = "0.6.0"
