[package]
name = "eigenda-cert-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.1.2", default-features = false }
alloy-sol-types = { version = "1.1.2", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
bitvec     = { version = "1.0.1", default-features = false }
eigenda-cert = { git = "ssh://git@github.com/Layr-Labs/hokulea.git", rev = "efe7767dde967008de5309f44fecb72aa2ef1e54" }
hashbrown = { version = "0.15.4", default-features = false, features = ["default-hasher"] }
thiserror  = { version = "2.0.12", default-features = false }
tiny-keccak  = { version = "2.0.2", default-features = false, features = ["keccak"] }

[dev-dependencies]
hex = "0.4.3"
