[package]
edition = "2024"
name = "eigenda-ethereum"
version = "0.1.0"

[dependencies]
alloy-consensus = { workspace = true, features = [
  "serde",
  "serde-bincode-compat",
  "k256",
] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
eigenda-verification = { path = "../eigenda-verification" }
futures = { workspace = true }
reth-trie-common = { workspace = true, features = ["serde"] }
rustls = { workspace = true, features = ["aws-lc-rs"], optional = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["alloc", "derive"] }

[dev-dependencies]
alloy-rpc-types = { workspace = true }
anyhow = { workspace = true }
testcontainers = { workspace = true }

[features]
default = []
native = [
  "alloy-provider/anvil-api",
  "alloy-provider/default",
  "alloy-provider/ws",
  "dep:rustls",
  "reth-trie-common/eip1186",
]
