[package]
edition = "2024"
name = "eigenda-ethereum"
version = "0.1.0"

[dependencies]
# workspace dependencies
eigenda-verification = { path = "../eigenda-verification" }

alloy-consensus = { workspace = true, features = [
  "serde",
  "serde-bincode-compat",
  "k256",
] }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, features = ["anvil-api", "default", "ws"] }
alloy-rpc-client = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
reth-trie-common = { workspace = true, features = ["serde", "eip1186"] }

derive_more.workspace = true
futures = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json.workspace = true
tracing = { workspace = true }

[dev-dependencies]
alloy-rpc-types = { workspace = true, features = ["anvil"] }
anyhow = { workspace = true }
testcontainers = { workspace = true }

[features]
default = []
