[package]
edition = "2024"
name = "eigenda-proxy"
version = "0.1.0"

[features]
# Feature flag to enable the managed proxy functionality, which downloads
# the eigenda-proxy binary during build and spins it up as a subprocess.
# Teams that are willing to manage a proxy instance as part of their deployment,
# which we recommend, can omit this feature and only use the proxy client functionality.
managed-proxy = ["reqwest", "sha2"]

[dependencies]
backon = { workspace = true }
bytes = { workspace = true }
eigenda-verification = { path = "../eigenda-verification" }
hex = { workspace = true }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { workspace = true, features = ["alloc", "derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "process", "rt", "macros"] }
tracing = { workspace = true }
url = { version = "2.5.4" }
schemars = { workspace = true, features = ["derive"] }

[build-dependencies]
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-provider = { workspace = true, features = ["anvil-api"] }
alloy-rpc-types = { workspace = true, features = ["anvil"] }
arbitrary = { workspace = true }
bincode = { workspace = true, features = ["derive", "serde", "std"] }
hex = { workspace = true }
jsonschema = { workspace = true }
rand = { workspace = true }
reltester = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
test-strategy = { workspace = true }
testcontainers = { workspace = true }
wiremock = { workspace = true }
